src/assets/styles/pages/defaultLayout.scss
.layout {
  --min-layout-height: 80rem;
  @media (max-width: 550px) {
    --min-layout-height: 470px;
  }
  min-height: var(--min-layout-height);
  display: flex;
  flex-direction: column;
  height: calc(100vh - calc(100vh - 100%));
  height: -webkit-fill-available;
  padding-top: var(--top-space);
  padding-bottom: 5rem;
  ::-webkit-scrollbar {
    width: 5px;
    height: 5px;
  }

  /* Track */
  ::-webkit-scrollbar-track {
    background: #f1f1f1;
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: #c4c4c4;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #cfcfcf;
  }
}

